Resume Feedback Page

--- a/.hintrc
+++ b/.hintrc
@@ -12,9 +12,15 @@
       }
     ],
     "axe/text-alternatives": [
-      "default",
+      "off",
       {
         "image-alt": "off"
+      }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
       }
     ]
   }
